--- a/formularioreal.html
+++ b/formularioreal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>PAINTA ACADEMY - Formulário de inscrição</title>
+	<title>PAINT ACADEMY - Formulário de inscrição</title>
 	<link rel="stylesheet" type="text/css" href="formulario_style.css">
 </head>
 <body>
