--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<img src="iniciante.png" id="mypassion3">
 			<img src="seta.png" id="seta2">
 			<div class="identation">
-			    <p class="sobre-text">   Somos maior empresa de ensino de desing gráfico da América Latina. Começamos numa simples casa e hoje estamos por todo brasil. Somos milhares de empregados satisfazendo milhões de cliente que saem sabendo de TUDO que está por dentro da área de design gráfico. São mais de 10 anos no mercado oferecendo milhões de vagas em centenas de cursos. Estamos crescendo cada vez mais e com o seu apoio podemos lhe oferecer mais e mais. A empresa que surgiu de 3 designer destinados a passar conteúdo e hoje tem centenas de professores destinados a isso. Atualmente estamos oferecendo cursos de diversas áreas do design gráfico e sobre tudo que se pode conseguir a partir do programa Paint. Contamos com você para se juntar a nós nessa jornada!</p>
+			    <p class="sobre-text">   Somos a maior empresa de ensino de desing gráfico da América Latina. Começamos numa simples casa e hoje estamos por todo brasil. Somos milhares de empregados satisfazendo milhões de cliente que saem sabendo de TUDO que está por dentro da área de design gráfico. São mais de 10 anos no mercado oferecendo milhões de vagas em centenas de cursos. Estamos crescendo cada vez mais e com o seu apoio podemos lhe oferecer mais e mais. A empresa que surgiu de 3 designer destinados a passar conteúdo e hoje tem centenas de professores destinados a isso. Atualmente estamos oferecendo cursos de diversas áreas do design gráfico e sobre tudo que se pode conseguir a partir do programa Paint. Contamos com você para se juntar a nós nessa jornada!</p>
 			</div>
 		</div>
 	</div>
